Resource Wizard - Schema Handling editor - object type editor update

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/SchemaHandlingStep.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/SchemaHandlingStep.html
@@ -132,54 +132,6 @@
                     <label><wicket:message key="SchemaHandlingStep.label.attributes" /></label>
                 </dt>
                 <div wicket:id="editorAttributes" />
-                <!--<dd class="cap-dl-multivalue">-->
-                    <!--<div class="input-group">-->
-                        <!--<div class="input-group">-->
-                            <!--<input type="text" class="form-control input-sm" value="first"/>-->
-<!---->
-                            <!--<span class="input-group-btn">-->
-                                <!--<a style="" class="btn btn-sm btn-primary" title="Edit">-->
-                                    <!--<i class="fa fa-pencil-square-o"/>-->
-                                <!--</a>-->
-                            <!--</span>-->
-                        <!--</div>-->
-<!---->
-                        <!--<div class="col-xs-2"/>-->
-<!---->
-                        <!--<div class="input-group-btn">-->
-                            <!--<a class="btn btn-sm btn-danger" title="Remove">-->
-                                <!--<i class="fa fa-minus"/>-->
-                            <!--</a>-->
-                            <!--<a class="btn btn-sm btn-success" title="Add">-->
-                                <!--<i class="fa fa-plus"/>-->
-                            <!--</a>-->
-                       <!--</div>-->
-                    <!--</div>-->
-                <!--</dd>-->
-                <!--<dd class="cap-dl-multivalue">-->
-                    <!--<div class="input-group">-->
-                        <!--<div class="input-group">-->
-                            <!--<input type="text" class="form-control input-sm" value="second"/>-->
-<!---->
-                            <!--<span class="input-group-btn">-->
-                                <!--<a class="btn btn-sm btn-primary" title="Edit">-->
-                                    <!--<i class="fa fa-pencil-square-o"/>-->
-                                <!--</a>-->
-                            <!--</span>-->
-                        <!--</div>-->
-<!---->
-                        <!--<div class="col-xs-2"/>-->
-<!---->
-                        <!--<div class="input-group-btn">-->
-                            <!--<a class="btn btn-sm btn-danger" title="Remove">-->
-                                <!--<i class="fa fa-minus"/>-->
-                            <!--</a>-->
-                            <!--<a class="btn btn-sm btn-success" title="Add">-->
-                                <!--<i class="fa fa-plus"/>-->
-                            <!--</a>-->
-                       <!--</div>-->
-                    <!--</div>-->
-                <!--</dd>-->
             </dl>
 
             <!--Associations -->
@@ -187,54 +139,7 @@
                 <dt>
                     <label><wicket:message key="SchemaHandlingStep.label.associations" /></label>
                 </dt>
-                <dd class="cap-dl-multivalue">
-                    <div class="input-group">
-                        <div class="input-group">
-                            <input type="text" class="form-control input-sm" value="first"/>
-
-                            <span class="input-group-btn">
-                                <a class="btn btn-sm btn-primary" title="Edit">
-                                    <i class="fa fa-pencil-square-o"/>
-                                </a>
-                            </span>
-                        </div>
-
-                        <div class="col-xs-2"/>
-
-                        <div class="input-group-btn">
-                            <a class="btn btn-sm btn-danger" title="Remove">
-                                <i class="fa fa-minus"/>
-                            </a>
-                            <a class="btn btn-sm btn-success" title="Add">
-                                <i class="fa fa-plus"/>
-                            </a>
-                       </div>
-                    </div>
-                </dd>
-                <dd class="cap-dl-multivalue">
-                    <div class="input-group">
-                        <div class="input-group">
-                            <input type="text" class="form-control input-sm" value="second"/>
-
-                            <span class="input-group-btn">
-                                <a class="btn btn-sm btn-primary" title="Edit">
-                                    <i class="fa fa-pencil-square-o"/>
-                                </a>
-                            </span>
-                        </div>
-
-                        <div class="col-xs-2"/>
-
-                        <div class="input-group-btn">
-                            <a class="btn btn-sm btn-danger" title="Remove">
-                                <i class="fa fa-minus"/>
-                            </a>
-                            <a class="btn btn-sm btn-success" title="Add">
-                                <i class="fa fa-plus"/>
-                            </a>
-                       </div>
-                    </div>
-                </dd>
+                <div wicket:id="editorAssociations" />
             </dl>
 
             <dl class="dl-horizontal">
